--- a/app/main.css
+++ b/app/main.css
@@ -4774,6 +4774,16 @@ a.al-sidebar-list-link {
   height: 350px;
   margin-top: -20px; }
 
+  #amchart2 {
+  width: 100%;
+  height: 350px;
+  margin-top: -20px; }
+
+    #amchart3 {
+  width: 100%;
+  height: 350px;
+  margin-top: -20px; }
+
 #amChartMap {
   width: 100%;
   height: 315px; }
